--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
             <div class="logo-text">Saizen</div>
         </a>
         <div class="intro-text">
-            Yo, what's up, Ningen tachi? I'm Asato Saizen. I love developing my own apps as a hobby, 
+            Yo, Ningen tachi? Orewa Asato Saizen. I love developing my own apps as a hobby, 
             and I'm an unpaid worker. I also really love watching donghua and anime.
         </div>
         <div class="social-buttons">
