--- a/index.html
+++ b/index.html
@@ -882,8 +882,41 @@
         <div class="profile-card" onclick="window.open('https://www.instagram.com/swastika_tam129?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==', '_blank')">
             <img src="https://scontent.cdninstagram.com/v/t51.2885-19/485399943_1151139153374228_4954266359095767752_n.jpg?stp=dst-jpg_s160x160_tt6&_nc_cat=104&ccb=1-7&_nc_sid=bf7eb4&_nc_ohc=N9HHzgkJCy4Q7kNvgGyaAH_&_nc_oc=Adl-sHfZkx91ea6nmipbPDfEFjHXTw7ky4eG5Y63s9eqe9q1Al5Z27KKUleE_0EnTLtCYqnVg8dHcR22PEoNk1rB&_nc_zt=24&_nc_ht=scontent.cdninstagram.com&oh=00_AYE7Sul7IR1NqZNS9iswhrblZJXJXulDb1zS2Jeo22kGqg&oe=67EC8B3C" alt="Swastika">
             <div class="profile-info">
-                <h3>Swastika</h3>
+                <h3>Swastika_tam129</h3>
                 <span><i class="fab fa-instagram"></i> @swastika_tam129</span>
+            </div>
+        </div>
+
+        <!-- New Friend Cards -->
+        <div class="profile-card" onclick="window.open('https://www.instagram.com/i.mnotur__noonaa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==', '_blank')">
+            <img src="https://scontent.cdninstagram.com/v/t51.2885-19/454099871_820394389841760_6111911906812831382_n.jpg?stp=dst-jpg_s160x160_tt6&_nc_cat=101&ccb=1-7&_nc_sid=bf7eb4&_nc_ohc=B5qQb6mHUM0Q7kNvgHTFl23&_nc_oc=Adl_EmpeUhhPPzahnv4kXzYO11eUfsBH4YbeZQsqQ9BkqsltkfUMDUKX9Gxz5QLRBfXNbh4-Pf5Nzab88jPp9kY6&_nc_zt=24&_nc_ht=scontent.cdninstagram.com&oh=00_AYHQIMKP8QhFwerR6pEB5cMPSrMJVI5kFcclrBIvILqzAQ&oe=67ED5C57" alt="i.mnotur__noonaa">
+            <div class="profile-info">
+                <h3>i.mnotur__noonaa</h3>
+                <span><i class="fab fa-instagram"></i> @i.mnotur__noonaa</span>
+            </div>
+        </div>
+
+        <div class="profile-card" onclick="window.open('https://www.instagram.com/xez_yami?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==', '_blank')">
+            <img src="https://scontent.cdninstagram.com/v/t51.2885-19/457021070_1650690308805463_1714530953999956242_n.jpg?stp=dst-jpg_s160x160_tt6&_nc_cat=105&ccb=1-7&_nc_sid=bf7eb4&_nc_ohc=0rrJoBVGtv0Q7kNvgHZdc1l&_nc_oc=AdlnrKt9U3iVALS4grYjpHv0NBtLt-cDq02qRbPzcAxRHmo1z61rN9_JFCCDIEAG8GrbJ1BCalg47n26mWlkkDO7&_nc_zt=24&_nc_ht=scontent.cdninstagram.com&oh=00_AYG3GwOCsRq-9QmSAyMK9trSV-2HXR4yVJJ0dZfzUkQ7VQ&oe=67ED51BB" alt="xez_yami">
+            <div class="profile-info">
+                <h3>xez_yami</h3>
+                <span><i class="fab fa-instagram"></i> @xez_yami</span>
+            </div>
+        </div>
+
+        <div class="profile-card" onclick="window.open('https://www.instagram.com/sodhanz_t_mgr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==', '_blank')">
+            <img src="https://scontent.cdninstagram.com/v/t51.2885-19/486740490_1190866229709299_2364016860572735979_n.jpg?stp=dst-jpg_s160x160_tt6&_nc_cat=102&ccb=1-7&_nc_sid=bf7eb4&_nc_ohc=m77H8vQXpp0Q7kNvgHwNc6C&_nc_oc=AdkZhaY3Z31EGHcuU60yDuY_0qeJIQviWiHnT6-bgj-FAo08bjaz2R4zkfcJMxGIzMmGBbcmH5l7c7WSk-C09s3O&_nc_zt=24&_nc_ht=scontent.cdninstagram.com&oh=00_AYGlGpREpKprJroJcSe1f-1fKyeUNfCf65uGfDMh4hiL1Q&oe=67ED4C54" alt="sodhanz_t_mgr">
+            <div class="profile-info">
+                <h3>sodhanz_t_mgr</h3>
+                <span><i class="fab fa-instagram"></i> Otouto</span>
+            </div>
+        </div>
+
+        <div class="profile-card" onclick="window.open('https://www.instagram.com/icymoongal?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==', '_blank')">
+            <img src="https://scontent.cdninstagram.com/v/t51.2885-19/480831625_616647061276587_525309509494957472_n.jpg?stp=dst-jpg_s160x160_tt6&_nc_cat=109&ccb=1-7&_nc_sid=bf7eb4&_nc_ohc=mww7Tdgwl50Q7kNvgEp7mHG&_nc_oc=AdnmxkzHt7fjLwqfkflROGXwOVq8L7iI3cQgZhFClT1g872EPLzSOY2-7Ryx-sHIRgnZPSCUsHTeAzz3QmPC_8YN&_nc_zt=24&_nc_ht=scontent.cdninstagram.com&oh=00_AYGOvxRPgMz3jUpUuVIl4eBRkXI8iDDegyh2RcVUtG0_LA&oe=67ED52E2" alt="icymoongal">
+            <div class="profile-info">
+                <h3>icymoongal</h3>
+                <span><i class="fab fa-instagram"></i> Ane-Gimi</span>
             </div>
         </div>
     </div>
