--- a/index.html
+++ b/index.html
@@ -842,12 +842,12 @@
     <div class="features">
         <a href="https://anilist.co/user/AsatoSaizen/" target="_blank" class="feature-card clickable-card">
             <img src="https://anilist.co/img/icons/icon.svg" class="anilist-icon" alt="AniList Logo">
-            <h3>View my AniList Profile</h3>
+            <h3>AniList Profile</h3>
             <p>If you're interested in my anime and manga preferences, feel free to visit my AniList profile.</p>
         </a>
         <a href="https://anilist.co/user/AsatoSaizen/stats/anime/overview" target="_blank" class="feature-card clickable-card">
             <i class="fas fa-chart-pie feature-icon"></i>
-            <h3>Anime Statistics</h3>
+            <h3>AL Stats</h3>
             <p>Check out my detailed anime watching statistics and preferences on AniList</p>
         </a>
         <div class="feature-card clickable-card" id="friendsCard">
@@ -927,7 +927,7 @@
     </div>
 
     <footer>
-        <p>© 2024 Asato Saizen. Not affiliated with GitHub. Open source project.</p>
+        <p>© 2025 all rights reserved to Asato Saizen.</p>
     </footer>
 
     <script>
