--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
         <a href="https://anilist.co/user/AsatoSaizen/" target="_blank" class="feature-card clickable-card">
             <img src="https://anilist.co/img/icons/icon.svg" class="anilist-icon" alt="AniList Logo">
             <h3>AniList Profile</h3>
-            <p>If you're interested in my anime and manga preferences, feel free to visit my AniList profile.</p>
+            <p>If you're interested in my anime,donghua and manga preferences, feel free to visit my AniList profile.</p>
         </a>
         <a href="https://anilist.co/user/AsatoSaizen/stats/anime/overview" target="_blank" class="feature-card clickable-card">
             <i class="fas fa-chart-pie feature-icon"></i>
